# pasc

./: .gitignore  CMakeLists.txt
include/pasc/: .AST.h.swp  .Lexer.h.swp  .Parser.h.swp  AST.h  Lexer.h  Parser.h
tests/: for.pas  func.pas
